# SIEM-LITE

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_log_sender.py  vercel.json  vite.config.js
api/: ingest.py  log_analyzer.py
src/: App.jsx  index.css  main.jsx
supabase/: schema.sql
